--- a/Feature Engineering/Feature_Engineering.ipynb
+++ b/Feature Engineering/Feature_Engineering.ipynb
@@ -47,8 +47,8 @@
       "cell_type": "code",
       "source": [
         "# Loading data\n",
-        "bookers = pd.read_csv('/content/customer_table.csv', index_col=0)\n",
-        "bookings = pd.read_csv('/content/customer_flights.csv', index_col=0)"
+        "bookers = pd.read_csv('https://raw.githubusercontent.com/dgalian/FTW_B7/main/Feature%20Engineering/customer_table.csv', index_col=0)\n",
+        "bookings = pd.read_csv('https://raw.githubusercontent.com/dgalian/FTW_B7/main/Feature%20Engineering/customer_flights.csv', index_col=0)"
       ],
       "metadata": {
         "id": "s_OaxjTvISL5"
