--- a/Capstone/Capstone_MBA.ipynb
+++ b/Capstone/Capstone_MBA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNZQPNLwIRShNk5x/hblXtC",
+      "authorship_tag": "ABX9TyPPBZC0S4oUQCFEigethZKD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/dgalian/FTW_B7/blob/main/Capstone/Capstone_MBA.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Using Market Basket Analysis to determine the typical combination of ICD Categories per Claim**"
+      ],
+      "metadata": {
+        "id": "F2yW1Amt6pA1"
+      }
     },
     {
       "cell_type": "markdown",
