--- a/Capstone/Capstone_MBA_v5.ipynb
+++ b/Capstone/Capstone_MBA_v5.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPfSrs8nI47ltMGsmDSJvv0",
+      "authorship_tag": "ABX9TyOEFXIH3yRx2ugL90cnj1sz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6953,6 +6953,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Max length = 4"
+      ],
+      "metadata": {
+        "id": "rtZNKFxfKKr1"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Getting combinations of procedure sets\n",
@@ -7455,6 +7464,15 @@
           "execution_count": 56
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Max length = 5"
+      ],
+      "metadata": {
+        "id": "t82B78MTKDGs"
+      }
     },
     {
       "cell_type": "code",
